--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 header,
 footer {
     width: 100%;
-    height: 120px;
+    height: 145px;
     background-color: blue;
     color: white;
 }
@@ -14,8 +14,8 @@ h1{
     margin-bottom: 10px;
 }
 h2 {
-    text-align:left;
-    color: #08665e;
+    text-align:center;
+    /*color: #08665e;*/
     padding-left: 20px;
 }
 img {
@@ -36,7 +36,7 @@ p {
     font-size: 30px;
 }
 .card {
-    width: 50%;
+    width: 90%;
     margin: 40px auto;
     border: 5px solid rgb(3, 55, 3);
     box-shadow: 6px 10px rgb(4, 4, 94);
